--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_profile">My Profile</string>
     <string name="title_custom_playlist">My Playlists</string>
     <string name="title_generated_playlist">Generated Playlist</string>
+    <string name="title_song_page">About this song</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
