--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="title_generated_playlist">Generated Playlist</string>
     <string name="title_song_page">About this song</string>
 
+    <string name="title_comments">Comments</string>
+    <string name="button_see_the_comments">See the comments</string>
+    <string name="title_recommanded_by">Recommanded by</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
