--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="comment_section">Comments section</string>
+
+    <string name="popmenu_recommand_this_song">Recommande this song</string>
+    <string name="popmenu_unrecommand_this_song">Unrecommande this song</string>
 </resources>
