Ajout du fragment qui permettra la s/lection des gouts musicaux du user + ajout de la navigation in/out pour ce fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="popmenu_recommand_this_song">Recommande this song</string>
     <string name="popmenu_delete_song">Delete</string>
     <string name="popmenu_unrecommand_this_song">Unrecommande this song</string>
+    <string name="title_music_type_preferences">Music type preferences</string>
 </resources>
