--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="popmenu_delete_song">Delete</string>
     <string name="popmenu_unrecommand_this_song">Unrecommande this song</string>
     <string name="title_music_type_preferences">Music type preferences</string>
+    <string name="confirm_the_selection">Confirm selection</string>
 </resources>
